--- a/profile.html
+++ b/profile.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <header>
-<p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></>
+<p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></p>
 </header>
   <main>
 <!-- ✅ 検索UIは後回しなので最小だけ -->
 <section>
-  <p>棋士プロフィール一覧（JS独立）</p>
+  <p>棋士プロフィール一覧（現役期間を追加）</p>
 
   <!-- 並べ替え対象を選ぶと「表示する列」が切り替わる -->
   <label for="">並べ替え</label>
@@ -55,7 +55,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=2025-11-04-a" defer></script>
+<script src="profile.js?v=2025-11-05-a" defer></script>
 </body>
 </html>
 
