--- a/profile.html
+++ b/profile.html
@@ -21,13 +21,13 @@
     <option value="sekiji">席次</option>
     <option value="kishi-no">棋士番号</option>
     <option value="age">年齢（享年）</option>
-    <option value="term-active">現役期間</option>
     <option value="age-4d">四段昇段年齢</option>
     <option value="age-5d">五段昇段年齢</option>
     <option value="age-6d">六段昇段年齢</option>
     <option value="age-7d">七段昇段年齢</option>
     <option value="age-8d">八段昇段年齢</option>
     <option value="age-9d">九段昇段年齢</option>
+    <option value="term-active">現役期間</option>
     <option value="dur-4to5">四→五段 昇段所要期間</option>
     <option value="dur-5to6">五→六段 昇段所要期間</option>
     <option value="dur-6to7">六→七段 昇段所要期間</option>
@@ -55,7 +55,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=2025-11-05-a" defer></script>
+<script src="profile.js?v=2025-11-05-b" defer></script>
 </body>
 </html>
 
