--- a/profile.html
+++ b/profile.html
@@ -27,6 +27,7 @@
     <option value="age-7d">七段昇段年齢</option>
     <option value="age-8d">八段昇段年齢</option>
     <option value="age-9d">九段昇段年齢</option>
+    <option value="age-active">現役年齢</option>
     <option value="term-active">現役期間</option>
     <option value="dur-4to5">四→五段 昇段所要期間</option>
     <option value="dur-5to6">五→六段 昇段所要期間</option>
@@ -55,7 +56,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=2025-11-05-b" defer></script>
+<script src="profile.js?v=2025-11-05-c" defer></script>
 </body>
 </html>
 
