--- a/profile.html
+++ b/profile.html
@@ -56,7 +56,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=2025-11-05-c" defer></script>
+<script src="profile.js?v=2025-11-13-a" defer></script>
 </body>
 </html>
 
