--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
   <main>
 <!-- ✅ 検索UIは後回しなので最小だけ -->
 <section>
-  <p>棋士プロフィール一覧（現役期間を追加）</p>
+  <p>棋士プロフィール一覧（引退日を基準に統一）</p>
 
   <!-- 並べ替え対象を選ぶと「表示する列」が切り替わる -->
   <label for="">並べ替え</label>
@@ -56,7 +56,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=2025-11-13-a" defer></script>
+<script src="profile.js?v=20251113-b" defer></script>
 </body>
 </html>
 
