--- a/title-all.html
+++ b/title-all.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
-    <link rel="stylesheet" href="style.css?v=20251010-a">
+    <link rel="stylesheet" href="style.css?v=20251115-a">
     <style>
   section {
     display: flex;
@@ -74,7 +74,7 @@
   <!-- 4行目：表示件数（初期値9をHTMLでも入れておく） -->
   <div class="row limit">
     <label>表示件数：
-  <input type="number" class="limit-input" placeholder="例：9" min="1">
+  <input type="number" class="limit-input" value="9" min="1">
 </label>
     <button class="limit-all">全件（空欄）</button>
   </div>
