--- a/profile.html
+++ b/profile.html
@@ -13,13 +13,19 @@
   <main>
 <!-- ✅ 検索UIは後回しなので最小だけ -->
 <section>
-  <p>棋士プロフィール一覧（修正版）</p>
+  <p>棋士プロフィール一覧（昇段日追加）</p>
 
   <!-- 並べ替え対象を選ぶと「表示する列」が切り替わる -->
   <label for="">並べ替え</label>
   <select name="">
     <option value="sekiji">席次</option>
     <option value="kishi-no">棋士番号</option>
+    <option value="date-4d">四段昇段日</option>
+    <option value="date-5d">五段昇段日</option>
+    <option value="date-6d">六段昇段日</option>
+    <option value="date-7d">七段昇段日</option>
+    <option value="date-8d">八段昇段日</option>
+    <option value="date-9d">九段昇段日</option>
     <option value="age">年齢（享年）</option>
     <option value="age-4d">四段昇段年齢</option>
     <option value="age-5d">五段昇段年齢</option>
