--- a/profile.html
+++ b/profile.html
@@ -13,45 +13,20 @@
   <main>
 <!-- ✅ 検索UIは後回しなので最小だけ -->
 <section>
-  <p>棋士プロフィール一覧（昇段日追加）</p>
 
-  <!-- 並べ替え対象を選ぶと「表示する列」が切り替わる -->
-  <label for="">表示項目を選ぶ</label>
+  <p>大分類を選択してください。</p>
 
-  <select name="">
-    <!-- 基本情報 -->
-    <option disabled>―― 基本情報 ――</option>
-    <option value="sekiji">席次</option>
-    <option value="kishi-no">棋士番号</option>
+  <select name="category">
+    <option value="basic">基本情報</option>
+    <option value="age">年齢</option>
+    <option value="term">期間</option>
+    <option value="date">昇段日</option>
+  </select>
 
-    <!-- 年齢 -->
-    <option disabled>―― 年齢 ――</option>
-    <option value="age">年齢（享年）</option>
-    <option value="age-active">現役年齢</option>
-    <option value="age-4d">四段昇段年齢</option>
-    <option value="age-5d">五段昇段年齢</option>
-    <option value="age-6d">六段昇段年齢</option>
-    <option value="age-7d">七段昇段年齢</option>
-    <option value="age-8d">八段昇段年齢</option>
-    <option value="age-9d">九段昇段年齢</option>
+  <p>項目を選択してください。</p>
 
-    <!-- 期間 -->
-    <option disabled>―― 期間 ――</option>
-    <option value="term-active">現役期間</option>
-    <option value="dur-4to5">四→五段 昇段所要期間</option>
-    <option value="dur-5to6">五→六段 昇段所要期間</option>
-    <option value="dur-6to7">六→七段 昇段所要期間</option>
-    <option value="dur-7to8">七→八段 昇段所要期間</option>
-    <option value="dur-8to9">八→九段 昇段所要期間</option>
-
-    <!-- 昇段日 -->
-    <option disabled>―― 昇段日 ――</option>
-    <option value="date-4d">四段 昇段日</option>
-    <option value="date-5d">五段 昇段日</option>
-    <option value="date-6d">六段 昇段日</option>
-    <option value="date-7d">七段 昇段日</option>
-    <option value="date-8d">八段 昇段日</option>
-    <option value="date-9d">九段 昇段日</option>
+  <select name="detail">
+    <!-- ※ここはJSで動的に書き換えられます -->
   </select>
 
   <p>並べ替えを選択してください。</p>
@@ -61,7 +36,6 @@
   <label><input type="radio" name="order" value="desc">降順</label>
 
 </section>
-
 <table>
   <thead></thead>
   <tbody></tbody>
@@ -75,7 +49,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=20251115a" defer></script>
+<script src="profile.js?v=20251116a" defer></script>
 </body>
 </html>
 
