--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 <!-- ✅ 検索UIは後回しなので最小だけ -->
 <section>
 
-  <p>大分類を選択してください。</p>
+  <p>表示したいジャンルを選択</p>
 
   <select name="category">
     <option value="basic">基本情報</option>
@@ -49,7 +49,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=20251116c" defer></script>
+<script src="profile.js?v=20251116d" defer></script>
 </body>
 </html>
 
