--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
     <!-- ※ここはJSで動的に書き換えられます -->
   </select>
 
-  <p>並べ替えを選択してください。</p>
+  <p>並べ替える。</p>
 
   <label><input type="radio" name="order" value="keep" checked>席次順</label>
   <label><input type="radio" name="order" value="asc">昇順</label>
@@ -49,7 +49,7 @@
   </main>
   <footer>フッター</footer>
 
-<script src="profile.js?v=20251116e" defer></script>
+<script src="profile.js?v=20251116f" defer></script>
 </body>
 </html>
 
