--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <section>
     <h2>成績・ランキング</h2>
     <ul>
+      <li><a href="https://ulti-shogi.github.io/beta-open/title.html">新・title.html</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/rate.html">歴代年度勝率8割以上達成者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/title-all.html">歴代タイトル獲得経験者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/prize-ranking.html">対局料・賞金ランキング一覧</a></li>
@@ -68,7 +69,8 @@
     <h2>プロフィール・年齢</h2>
     <ul>
       <li><a href="https://ulti-shogi.github.io/beta-open/age.html">四段昇段平均年齢・中央値</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/kishi.html">棋士のプロフィール検索（フィルタ機能付き）</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/kishi.html">プロフィール検索（カード）</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/profile.html">プロフィール検索（NEW）</a></li>
     </ul>
   </section>
 </main>
