--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
-    <link rel="stylesheet" href="style.css?v=20251104-c">
+    <link rel="stylesheet" href="../style.css?v=20251201-a">
 </head>
 <body>
 <header>
