Update and rename prize-ranking.html to prize-ranking/prize-ranking.html

--- a/prize-ranking/prize-ranking.html
+++ b/prize-ranking/prize-ranking.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>将棋の殿堂｜賞金ランキング</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <link rel="stylesheet" href="style.css?v=20250926a" />
+  <link rel="stylesheet" href="../style.css?v=20251201-a" />
   <style>
     main > section:first-of-type {
       display: grid;
