Update and rename age.html to age/age.html

--- a/age/age.html
+++ b/age/age.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>将棋棋士の四段昇段平均年齢・中央値</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <!-- ▼ CSSにキャッシュバスター（値は更新ごとに変えてOK） -->
-  <link rel="stylesheet" href="style.css?v=20251001-d">
+  <link rel="stylesheet" href="../style.css?v=20251201-a">
   <style>
   /* section 内の p を全部中央寄せ */
   section > p { text-align: center; }
