--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=20251201-a">
 <style>
   /* --- セクション全体のスタイル（index.html専用） --- */
   body#index-page section, body#index-page .free {
@@ -57,10 +57,10 @@
   <section>
     <h2>成績・ランキング</h2>
     <ul>
-      <li><a href="https://ulti-shogi.github.io/beta-open/title.html">新・title.html</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/rate.html">歴代年度勝率8割以上達成者</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/title/title.html">新・title.html</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/rate/rate.html">歴代年度勝率8割以上達成者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/title-all.html">歴代タイトル獲得経験者</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/prize-ranking.html">対局料・賞金ランキング一覧</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/prize-ranking/prize-ranking.html">対局料・賞金ランキング一覧</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/akahata.html">歴代新人王戦結果一覧</a></li>
     </ul>
   </section>
@@ -68,9 +68,9 @@
   <section>
     <h2>プロフィール・年齢</h2>
     <ul>
-      <li><a href="https://ulti-shogi.github.io/beta-open/age.html">四段昇段平均年齢・中央値</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/age/age.html">四段昇段平均年齢・中央値</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/kishi.html">プロフィール検索（カード）</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/profile.html">プロフィール検索（NEW）</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/profile/profile.html">プロフィール検索（NEW）</a></li>
     </ul>
   </section>
 </main>
