--- a/kishi/kishi.html
+++ b/kishi/kishi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>棋士プロフィール検索</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css?v=20251201-a">
   <style>
 /* カード全体のレイアウト */
 div.card {
