--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2>プロフィール・年齢</h2>
     <ul>
       <li><a href="https://ulti-shogi.github.io/beta-open/age/age.html">四段昇段平均年齢・中央値</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/kishi.html">プロフィール検索（カード）</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/kishi/kishi.html">プロフィール検索（カード）</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/profile/profile.html">プロフィール検索（NEW）</a></li>
     </ul>
   </section>
