--- a/title/title.html
+++ b/title/title.html
@@ -61,7 +61,14 @@
     <option value="十段戦">十段戦</option>
     <option value="九段戦">九段戦</option>
   </select>
-
+  
+  <!-- ランキングの並べ替え基準 -->
+  <p>並べ替えの基準を選択してください。</p>
+  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得（多い順）</label>
+  <label><input type="radio" name="rankingSort" value="登場">登場（多い順）</label>
+  <label><input type="radio" name="rankingSort" value="敗退">敗退（多い順）</label>
+  <label><input type="radio" name="rankingSort" value="勝率">勝率（高い順）</label>
+  
   <!-- 表示実行ボタン -->
   <p>
     <button>表示</button>
