--- a/title/title.html
+++ b/title/title.html
@@ -64,14 +64,13 @@
   
   <!-- ランキングの並べ替え基準 -->
   <p>並べ替えの基準を選択してください。</p>
-  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得（多い順）</label>
-  <label><input type="radio" name="rankingSort" value="登場">登場（多い順）</label>
-  <label><input type="radio" name="rankingSort" value="敗退">敗退（多い順）</label>
-  <label><input type="radio" name="rankingSort" value="勝率">勝率（高い順）</label>
-  
+  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得</label>
+  <label><input type="radio" name="rankingSort" value="登場">登場</label>
+  <label><input type="radio" name="rankingSort" value="勝率">勝率</label>
+  <label><input type="radio" name="rankingSort" value="敗退">敗退</label>
   <!-- 表示実行ボタン -->
   <p>
-    <button>表示</button>
+    <button>この条件を表示する</button>
   </p>
 </section>
   
@@ -89,7 +88,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251201-1" defer></script>
+  <script src="title.js?v=20251202-1" defer></script>
 </body>
 </html>
 
