--- a/title/title.html
+++ b/title/title.html
@@ -18,7 +18,7 @@
   <!-- ①番勝負一覧／②ランキング の切り替え -->
   <p>表示する内容を選択してください。</p>
   <label><input type="radio" name="mode" value="match" checked>番勝負一覧</label>
-  <label><input type="radio" name="mode" value="ranking">タイトル獲得ランキング</label>
+  <label><input type="radio" name="mode" value="ranking">獲得等ランキング</label>
 
   <!-- ① 番勝負一覧モードの設定 -->
   <p>番勝負一覧の表示方法を選択してください。</p>
@@ -64,10 +64,11 @@
   
   <!-- ランキングの並べ替え基準 -->
   <p>並べ替えの基準を選択してください。</p>
-  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得</label>
   <label><input type="radio" name="rankingSort" value="登場">登場</label>
-  <label><input type="radio" name="rankingSort" value="勝率">勝率</label>
+  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得</label>
   <label><input type="radio" name="rankingSort" value="敗退">敗退</label>
+  <label><input type="radio" name="rankingSort" value="勝率">勝率</label>
+  
   <!-- 表示実行ボタン -->
   <p>
     <button>この条件を表示する</button>
