--- a/title/title.html
+++ b/title/title.html
@@ -13,7 +13,7 @@
 </header>
   <main>
       <section>
-  <h2>タイトル検索</h2>
+  <h2>タイトル検索ページ</h2>
 
   <!-- ①番勝負一覧／②ランキング の切り替え -->
   <p>表示する内容を選択してください。</p>
@@ -89,7 +89,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251202-1" defer></script>
+  <script src="title.js?v=20251202-2" defer></script>
 </body>
 </html>
 
