--- a/title/title.html
+++ b/title/title.html
@@ -50,6 +50,7 @@
   <p>ランキングの対象を選択してください。</p>
   <select name="rankingTarget">
     <option value="通算">通算</option>
+    <option value="pair">同一カード回数ランキング</option>
     <option value="竜王戦">竜王戦</option>
     <option value="名人戦">名人戦</option>
     <option value="叡王戦">叡王戦</option>
@@ -89,7 +90,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251202-2" defer></script>
+  <script src="title.js?v=20251202-3" defer></script>
 </body>
 </html>
 
