--- a/title/title.html
+++ b/title/title.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- title-5 -->
+<!-- title-6 -->
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 
  <p>表示する内容を選択してください。</p>
   <label><input type="radio" name="mode" value="match" checked>番勝負一覧</label>
-  <label><input type="radio" name="mode" value="ranking">獲得等ランキング</label>
+  <label><input type="radio" name="mode" value="ranking">獲得ランキング</label>
   <label><input type="radio" name="mode" value="other">その他</label>
 
   <!-- ① 番勝負一覧モードの設定 -->
@@ -101,7 +101,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251203-2" defer></script>
+  <script src="title.js?v=20251203-3" defer></script>
 </body>
 </html>
 
