--- a/title/title.html
+++ b/title/title.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- title-6 -->
+<!-- title-7 -->
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -65,7 +65,7 @@
     <!-- ③ その他モードの設定 -->
   <p>その他の集計を選択してください。</p>
 <select name="otherTarget">
-  <option value="pair">同一カード回数ランキング</option>
+  <option value="pair">同一カード対戦回数ランキング</option>
   <option value="player">棋士別タイトル戦対戦回数ランキング</option>
 </select>
 
@@ -95,13 +95,13 @@
 
 <div class="free">
   <h3>出典</h3>
-  <p>日本将棋連盟</p>
+  <p>日本将棋連盟：棋戦一覧</p>
       </div>
 
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251203-3" defer></script>
+  <script src="title.js?v=20251203-4" defer></script>
 </body>
 </html>
 
