--- a/title/title.html
+++ b/title/title.html
@@ -81,13 +81,13 @@
 
   <p>一般棋戦を選択してください。（棋戦ごと）</p>
   <select name="generalKisen">
-    <option value="朝日杯">朝日杯</option>
+    <option value="朝日杯将棋オープン戦">朝日杯</option>
     <option value="銀河戦">銀河戦</option>
-    <option value="NHK杯">NHK杯</option>
-    <option value="JT杯">JT杯</option>
+    <option value="NHK杯将棋トーナメント">NHK杯</option>
+    <option value="将棋日本シリーズ　JTプロ公式戦">JT杯</option>
     <option value="達人戦">達人戦</option>
     <option value="新人王戦">新人王戦</option>
-    <option value="青流戦">青流戦</option>
+    <option value="加古川青流戦">青流戦</option>
   </select>
 
   <p>年度を選択してください。（一般棋戦・年度ごと）</p>
