--- a/title/title.html
+++ b/title/title.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- title-8 -->
+<!-- title-kisen-1 -->
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -81,13 +81,13 @@
 
   <p>一般棋戦を選択してください。（棋戦ごと）</p>
   <select name="generalKisen">
-    <option value="朝日杯将棋オープン戦">朝日杯</option>
+    <option value="朝日杯">朝日杯将棋オープン戦</option>
     <option value="銀河戦">銀河戦</option>
-    <option value="NHK杯将棋トーナメント">NHK杯</option>
-    <option value="将棋日本シリーズ JTプロ公式戦">JT杯</option>
-    <option value="達人戦">達人戦</option>
+    <option value="NHK杯">NHK杯将棋トーナメント</option>
+    <option value="JT杯">将棋日本シリーズ JTプロ公式戦</option>
+    <option value="達人戦">達人戦立川立飛杯</option>
     <option value="新人王戦">新人王戦</option>
-    <option value="加古川青流戦">青流戦</option>
+    <option value="青流戦">加古川青流戦</option>
   </select>
 
   <p>年度を選択してください。（一般棋戦・年度ごと）</p>
@@ -113,7 +113,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251204-2" defer></script>
+  <script src="title.js?v=20251204-1" defer></script>
 </body>
 </html>
 
