--- a/title/title.html
+++ b/title/title.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- title-kisen-1 -->
+<!-- title-9 -->
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -59,8 +59,8 @@
   </select>
 
   <p>並べ替え基準を選択してください。</p>
-  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得</label>
   <label><input type="radio" name="rankingSort" value="登場">登場</label>
+  <label><input type="radio" name="rankingSort" value="獲得" checked>獲得</label>
   <label><input type="radio" name="rankingSort" value="敗退">敗退</label>
   <label><input type="radio" name="rankingSort" value="勝率">勝率</label>
 
@@ -113,7 +113,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="title.js?v=20251204-1" defer></script>
+  <script src="title.js?v=20251205-1" defer></script>
 </body>
 </html>
 
